k8s/manifests/instastories-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: instastories-namespace
  labels: 
    name: instastories-namespace
