k8s/manifests/instastories-mongo-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: instastories-mongo-service
  namespace: instastories-namespace
  labels:
    app: instastories
    tier: mongo
spec:
  selector:
    app: instastories
    tier: mongo
  ports:
    - protocol: TCP
      port: 27017
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: instastories-mongo-deployment
  namespace: instastories-namespace
  labels:
    app: instastories
    tier: mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: instastories
      tier: mongo
  template:
    metadata:
      labels:
        app: instastories
        tier: mongo
    spec:
      containers:
      - name: mongodb
        image: mongo:latest
        resources:
          limits:
            memory: 512Mi
            cpu: "1"
          requests:
            memory: 512Mi
            cpu: "1"
        ports:
        - containerPort: 27017
        volumeMounts:
        - name: instastories-mongo-data
          mountPath: /data/db
      volumes:
      - name: instastories-mongo-data
        persistentVolumeClaim:
          claimName: instastories-mongo-pvc
