k8s/manifests/instastories-mongoexpress-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: instastories-mongo-express-service
  namespace: instastories-namespace
  labels:
    app: instastories
    tier: mongo-express
spec:
  type: NodePort
  selector:
    app: instastories
    tier: mongo-express
  ports:
    - protocol: TCP
      port: 8081
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: instastories-mongo-express-deployment
  namespace: instastories-namespace
  labels:
    app: instastories
    tier: mongo-express
spec:
  replicas: 1
  selector:
    matchLabels:
      app: instastories
      tier: mongo-express
  template:
    metadata:
      labels:
        app: instastories
        tier: mongo-express
    spec:
      containers:
      - name: mongo-express
        image: mongo-express
        resources:
          limits:
            memory: 128Mi
            cpu: "0.2"
          requests:
            memory: 128Mi
            cpu: "0.1"
        ports:
        - containerPort: 8081
