k8s/manifests/instastories-web-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: instastories-web-service
  namespace: instastories-namespace
spec:
  type: NodePort
  selector:
    app: instastories
    tier: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: instastories-web-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  namespace: instastories-namespace
spec:
  tls:
    - secretName: 192-168-64-24-nip-io-tls
      hosts:
        - '*.192.168.64.24.nip.io'
  rules:
  - host: instastories.192.168.64.24.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend: 
          service: 
            name: instastories-web-service
            port:
              number: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: instastories-web-deployment
  namespace: instastories-namespace
  labels:
    app: instastories
spec:
  replicas: 2
  selector:
    matchLabels:
      app: instastories
      tier: frontend
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: instastories
        tier: frontend
    spec:
      containers:
      - name: instastorie-web
        imagePullPolicy: Always
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        image: hpfpv/instastories-web:latest
        volumeMounts:
          - name: config
            mountPath: "/usr/local/apache2/htdocs/js/conf/"
            readOnly: true
        resources:
          limits:
            memory: 256Mi
            cpu: "0.5"
          requests:
            memory: 128Mi
            cpu: "0.2"
        securityContext: {}
        # env:
        # - name: API_ENDPOINT
        #   valueFrom: 
        #     configMapKeyRef:
        #       name: instastories-api-config
        #       key: api-endpoint
        # command: ["sudo echo $API_ENDPOINT > /usr/local/apache2/htdocs/js/config"]
        # # args: ["-c", "echo $API_ENDPOINT > /usr/local/apache2/htdocs/js/config"]
        ports:
        - containerPort: 80
      volumes:
      - name: config
        configMap:
          name: instastories-api-config
